# MAINTAINER-S-COPILOT

./: .env.example  .gitignore  README.md  alembic.ini  corpus.jsonl  docker-compose.yml  eval_report_classification.json  eval_report_rag.json  eval_report_rag_naive.json  eval_thresholds.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  deps.py  errors.py
app/api/routers/: __init__.py  auth.py  chat.py  embed.py  memory.py  rag.py  widgets.py
app/artifacts/: README.md  manifest.json  model_card.json
app/db/: __init__.py  base.py  orm.py  session.py
app/domain/: __init__.py  enums.py  exceptions.py  models.py
app/infra/: __init__.py  llm.py  minio_client.py  modelserver_client.py  redaction.py  redis_client.py  tracing.py  vault.py
app/repositories/: __init__.py  audit_repo.py  conversation_repo.py  memory_repo.py  user_repo.py  widget_repo.py
app/services/: __init__.py  auth_service.py  chat_service.py  classification_service.py  memory_service.py  rag_service.py  widget_service.py
app/services/tools/: __init__.py  classify_tool.py  ner_tool.py  rag_tool.py  summarize_tool.py  write_memory_tool.py
chatbot/: __init__.py  api_client.py  app.py
chatbot/pages/: 1_chat.py  2_admin_widgets.py  3_memory_inspector.py  4_evals.py
demo/host/: index.html  nginx.conf
docker/: api.Dockerfile  chatbot.Dockerfile  host.Dockerfile  migrate.Dockerfile  modelserver.Dockerfile  nginx-widget.conf  widget.Dockerfile
docs/: ARCH.md  DECISIONS.md  EVALS.md  RUNBOOK.md  SECURITY.md
evals/: __init__.py  report.py
evals/classification/: __init__.py  golden_set.jsonl  run_eval.py
evals/rag/: __init__.py  golden_set.jsonl  run_eval.py
ml/: __init__.py  compare.py
ml/baselines/: __init__.py  classical_ml.py  llm_baseline.py
ml/data/: __init__.py  fetch_issues.py  label_mapping.py  make_splits.py
ml/train/: __init__.py  finetune.py  model_card.py
model_cache/: classical_model.joblib  config.json
modelserver/: __init__.py  config.py  main.py
modelserver/pipelines/: __init__.py  classifier.py  ner.py  summarizer.py
modelserver/routers/: __init__.py  classify.py  ner.py  summarize.py
notebooks/: training.ipynb
prompts/: README.md  chatbot_system.md  llm_classifier_baseline.md  query_rewrite.md  summarizer.md
rag/: __init__.py  build_corpus.py  chunking.py  embed.py  index.py
scripts/: fix_notebook_encoding.py  vault_bootstrap.sh
tests/: __init__.py  conftest.py  test_boot_guards.py  test_layering.py  test_redaction.py
widget/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
widget-loader/: widget.js
widget/public/: widget-loader.js
widget/src/: Widget.tsx  api.ts  main.tsx  postMessage.ts
